// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Icon Component correctly 1`] = `
<div
  className="sc-hMqMXs frHmMz"
>
  check_circle
</div>
`;

exports[`renders the Icon Component correctly 2`] = `
<div
  className="sc-hMqMXs gGAsht"
>
  check_circle
</div>
`;

exports[`renders the Icon Component correctly 3`] = `
<div
  className="sc-hMqMXs jOWiIs"
>
  check_circle
</div>
`;
